--- a/app/templates/create.twig
+++ b/app/templates/create.twig
@@ -5,8 +5,8 @@
     <div class="container">
         <h1>CREATE YOUR COLLECTION</h1>
         <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-6">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
                 <h4 style="color:#40AAF2"><strong>NAME</strong></h4>
                 <div></div>
                 <label>What is the collection name you'd like scavengers to see?</label>
@@ -50,17 +50,8 @@
                 <label class="radio-inline"><input type="radio" name="optradio" class="orderCollection" value="1">Yes</label>
                 <label class="radio-inline"><input type="radio" name="optradio" class="orderCollection" value="0">No</label>
                 <div style="padding: 30px"></div>
-                <h4 style="color:#40AAF2"><strong>COLLECTION AUDIANCE</strong></h4>
-                <div></div>
-                <label>Who is your target audience? (Note: content will be reviewed and Magpie may change this rating if content is not appropriate for a specific age group. For more information, view our terms and conditions)</label>
-                <div></div>
-                <div><label><input type="radio" name="optradio" class="rating" value="E">All Ages</label></div>
-                <div><label><input type="radio" name="optradio" class="rating" value="T">Teen(13+)</label></div>
-                <div><label><input type="radio" name="optradio" class="rating" value="A">Young Adult(18+)</label></div>
-                <div><label><input type="radio" name="optradio" class="rating" value="M">Mature(21+)</label></div>
-                <div style="padding: 30px"></div>
             </div>
-            <div class="col-md-5"></div>
+            <div class="col-md-2"></div>
         </div>
         <div class="row">
             <div class="col-md-4">
@@ -83,6 +74,7 @@
         <script>
             $(document).on('click', '#btn-next', function(){
                 //var cid = parseInt($('#cid').text());
+                var abv = $("#abbreviation").val();
                 var name = $("#name").val();
                 var summary = $("#summary").val();
                 var numBadge = $("#badgeq").val();
@@ -92,6 +84,7 @@
                 var formData = new FormData(form);
                 formData.append("cid", cid);
                 formData.append("name", name);
+                formData.append("abv", abv);
                 formData.append("summary", summary);
                 formData.append("numBadge", numBadge);
                 formData.append("ordered", ordered);
