--- a/app/templates/landmarks.twig
+++ b/app/templates/landmarks.twig
@@ -38,23 +38,34 @@
             });
         });
     </script>
-    <div class="container" id="badgeContainer">
+    <div class="container">
         <h1>BUILD YOUR BADGES</h1>
-        <!--<div>These badges will belong to the collection with cid = {{cid}}</div>
-        <div>Number of badges in the database is {{numBadge}}</div>-->
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8" id="badgeContainer">
+
+            </div>
+            <div class="col-md-2"></div>
+        </div>
     </div>
     <div class="container">
-        <div class="panel panel-default">
-            <div class="panel-body text-center" style="background-color: #C8CDD5" onclick="append();">Add Another Badge</div>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <div class="panel panel-default">
+                    <div class="panel-body text-center" style="background-color: #C8CDD5" onclick="append({{cid|json_encode|raw}});">Add Another Badge</div>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
         </div>
     </div>
 
     <div class="row">
             <div class="col-md-4">
-                <button id="btn-prev" onClick="window.location.href = '/edit/' + {{cid}}" class="btn btn-default btn-md pull-right" style="border-radius: 17px; background: #52D291; padding-left: 30px; padding-right: 30px;">Previous</button>  
+                <button id="btn-prev" onClick="window.location.href = '/edit/' + {{cid}}" class="btn btn-default btn-md pull-right" style="border-radius: 17px; background: #52D291; padding-left: 30px; padding-right: 30px;">Previous</button>
             </div>
             <div class="col-md-4 text-center">
-                <button class="btn btn-default btn-md" style="border-radius: 17px; background: #52D291; padding-left: 40px; padding-right: 40px;" id="btn-save">Save</button> 
+                <button class="btn btn-default btn-md" style="border-radius: 17px; background: #52D291; padding-left: 40px; padding-right: 40px;" id="btn-save">Save</button>
             </div>
             <div class="col-md-4">
                 <button class="btn btn-default btn-md pull-left" onClick="window.location.href = '/awards/' + {{cid}}" style="border-radius: 17px; background: #52D291; padding-left: 40px; padding-right: 40px;" id="btn-next">Next</button>
@@ -76,6 +87,24 @@
     </script>
     <script>
         $( document ).ready(function() {
+            $('#newBadge').on('click', function(){
+                var numBadge = {{numBadge}};
+                var cid = {{ cid|json_encode|raw}};
+                var formData = new FormData();
+                formData.append("cid", cid);
+                formData.append("numBadge", numBadge);
+                $.ajax({
+                        url:'/collection/newBadge',
+                        type:'post',
+                        data:formData,
+                        contentType: false,
+                        processData: false,
+                        success:function(data){
+                            //alert("done");
+                        }
+                });
+            });
+
             $('.collapse').on('hidden.bs.collapse', function () {
                 var id = this.id;
                 //alert(id);
